Color contacto igual portafolio

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div>
             <form>
                 <legend class="text-center">
-                    <h2>Contacto</h2>
+                    <h2 class="text-center text-body">Contacto</h2>
                 </legend>
                 <div class="mb-3">
                     <input type="text" id="disabledTextInput" class="form-control font-weight-light"
