--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- seccion inicio-->
-    <section id="inicio" class="seccion img_fondo">
+    <section id="inicio" class="seccion img_fondo auto">
         
             <div class="row g-3 my-3 px-5 ini_text">
                 <div class="col-md-2">
@@ -89,7 +89,7 @@
     </section>
 
     <!-- seccion educación-->
-    <section id="educacion" class="seccion d-flex align-items-center bg-primary-subtle">
+    <section id="educacion" class="seccion d-flex align-items-center bg-primary-subtle auto">
         <div class="row g-3 my-3 px-5 py-3 logo_alig">
             <div class="col-md-12">
                 <h2 class="text-center text-body">Educación</h2>
@@ -221,7 +221,7 @@
     </section>
 
     <!-- seccion Forkear y Commit-->
-    <section id="forkear" class="seccion d-flex align-items-center bg-primary-subtle" data-bs-theme="dark">
+    <section id="forkear" class="seccion d-flex align-items-center bg-primary-subtle auto" data-bs-theme="dark">
         <div class="row g-3 my-3 px-5 py-3 text-white logo_alig">
             <div class="col-md-12">
                 <h2 class="text-center">Forkear y Commit</h2>
