agrego información de mi inserción de código

--- a/index.html
+++ b/index.html
@@ -222,34 +222,37 @@
 
     <!-- seccion Forkear y Commit-->
     <section id="forkear" class="seccion d-flex align-items-center bg-primary-subtle auto" data-bs-theme="dark">
-        <div class="row g-3 my-3 px-5 py-3 text-white logo_alig">
-            <div class="col-md-12">
-                <h2 class="text-center">Forkear y Commit</h2>
-            </div>
-            
-            <div class="row g-3 border border-dark mx-0 px-0 my-3">
-
-                <div class="col-md-6 px-0 py-5 text-center">
-                    <h2>JAVIERA VENEGAS CASTILLO</h2>
-                    <p>Realice Fork y Commit al proyecto personal de Javiera</p>
-                    <a class="btn btn-info" href="https://javivenegas.github.io" target="_blank" role="button">https://javivenegas.github.io/</a>
-                    <p>su directorio</p>
-                    <a class="btn btn-info" href="https://github.com/JaviVenegas" target="_blank" role="button">https://github.com/JaviVenegas/</a>
-                    <p>mi copia</p>
-                    <a class="btn btn-info" href="https://github.com/jromerom21" target="_blank" role="button">https://github.com/jromerom21/</a>
-                </div>
-                <div class="col-md-6 px-0 py-5 text-center">
-                    <h2>Alfredo Saavedra</h2>
-                    <p>Realice Fork y Commit al proyecto personal de Alfredo</p>
-                    <a class="btn btn-info" href="https://teoisnotdead.github.io/index.html" target="_blank" role="button">teoisnotdead.github.io/</a>
-                    <p>su directorio</p>
-                    <a class="btn btn-info" href="https://github.com/teoisnotdead" target="_blank" role="button">https://github.com/teoisnotdead/</a>
-                    <p>mi copia</p>
-                    <a class="btn btn-info" href="https://github.com/jromerom21" target="_blank" role="button">https://github.com/jromerom21/</a>
-                </div>
-
-            </div>
+      <div class="row g-3 my-3 px-5 py-3 text-white logo_alig">
+        <div class="col-md-12">
+          <h2 class="text-center">Forkear y Commit</h2>
         </div>
+        <div class="row g-3 border border-dark mx-0 px-0 my-3">
+          <div class="col-md-6 px-0 py-5 text-center">
+            <h2>JAVIERA VENEGAS CASTILLO</h2>
+            <p>Realice Fork y Commit al proyecto personal de Javiera</p>
+            <a class="btn btn-info" href="https://javivenegas.github.io" target="_blank" role="button">https://javivenegas.github.io/</a>
+            <p>su directorio</p>
+            <a class="btn btn-info" href="https://github.com/JaviVenegas" target="_blank" role="button">https://github.com/JaviVenegas/</a>
+            <p>mi copia</p>
+            <a class="btn btn-info" href="https://github.com/jromerom21" target="_blank" role="button">https://github.com/jromerom21/</a>
+          </div>
+          <div class="col-md-6 px-0 py-5 text-center">
+            <h2>Alfredo Saavedra</h2>
+            <p>Realice Fork y Commit al proyecto personal de Alfredo</p>
+            <a class="btn btn-info" href="https://teoisnotdead.github.io/index.html" target="_blank" role="button">teoisnotdead.github.io/</a>
+            <p>su directorio</p>
+            <a class="btn btn-info" href="https://github.com/teoisnotdead" target="_blank" role="button">https://github.com/teoisnotdead/</a>
+            <p>mi copia</p>
+            <a class="btn btn-info" href="https://github.com/jromerom21" target="_blank" role="button">https://github.com/jromerom21/</a>
+          </div>
+        </div>
+        <div class="row g-3 border border-dark mx-0 px-0 my-3">
+          <div class="col-md-12 px-0 py-5 text-center">
+            <h2>Carlos Arancibia Lange</h2>
+            <p>Realice Fork y Commit al proyecto personal de Jorge Romero</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- comentario: inicia seccion del Contacto-->
