--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maqueta Grid2</title>
+    <title>Proyecto Final</title>
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -17,8 +17,8 @@
         <header>
             <div class="grupo_cabecera">
                 <div class="cabecera_grupo1">
-                    <i class="fa-solid fa-store cabecera_grupo3"></i>
-                    <h1>Mi Ecommerce</h1>
+                    <i class="fa-solid fa-hamsa"></i>
+                    <h1>Rincon de Shiva</h1>
                 </div>
                 <div class="cabecera_grupo2">
                     <i class="fa-solid fa-bars"></i>
@@ -41,10 +41,10 @@
             <div class="menu">
                 <h2>Categorías</h2>
                 <ul>
-                    <li>Perfumes <span class="numero">(13)</span></li>
-                    <li>Ropa <span class="numero">(21)</span></li>
-                    <li>Accesorios <span class="numero">(41)</span></li>
-                    <li>Zapatos <span class="numero">(10)</span></li>
+                    <li>Decoración</li>
+                    <li>Inciensos</li>
+                    <li>Aceites</li>
+                    <li>Cuencos</li>
                 </ul>
             </div>
         </aside>
@@ -53,43 +53,51 @@
 
             <div class="container">
                 <div class="tarjeta">
-                    <img src="./assets/img/AX1326_3_500x500.jpg" alt="img1">
+                    <img src="./assets/img/BB_500x500.jpg" alt="img1">
                     <div class="contenido_tarjeta">
-                        <h2>ARMANI EXCHANGE</h2>
-                        <h4>159.990</h4>
-                        <button>Comprar</button>
+                        <h2>Buda Siddhartha Black Design </h2>
+                        <h4>$17.990</h4>
+                        <button>Añadir al Carrito</button>
                     </div>
                 </div>
                 <div class="tarjeta">
-                    <img src="./assets/img/EGE-600x800-1.jpg" alt="img2">
+                    <img src="./assets/img/Prod0_500x500.jpg" alt="img2">
                     <div class="contenido_tarjeta">
-                        <h2>NISHANE EGE</h2>
-                        <h4>208.990</h4>
-                        <button>Comprar</button>
+                        <h2>Lampara de Cuarzo Blanco</h2>
+                        <h4>$26.990</h4>
+                        <button>Añadir al Carrito</button>
                     </div>
                 </div>
                 <div class="tarjeta">
-                    <img src="./assets/img/gafas-oakley.jpg" alt="img3">
+                    <img src="./assets/img/CUENCO_695x695.jpg" alt="img3">
                     <div class="contenido_tarjeta">
-                        <h2>OAKLEY SUTRO</h2>
-                        <h4>99.990</h4>
-                        <button>Comprar</button>
+                        <h2>Cuenco Tibetano Morado</h2>
+                        <h4>$38.392</h4>
+                        <button>Añadir al Carrito</button>
                     </div>
                 </div>
                 <div class="tarjeta">
-                    <img src="./assets/img/GREENWICH-VILLAGE-1.jpg" alt="img4">
+                    <img src="./assets/img/7ArcangelPack_500x500.jpg" alt="img4">
                     <div class="contenido_tarjeta">
-                        <h2>BOND No.9</h2>
-                        <h4>415.990</h4>
-                        <button>Comprar</button>
+                        <h2>Aceite Esencial 7 Arcangeles</h2>
+                        <h4>$29.990</h4>
+                        <button>Añadir al Carrito</button>
                     </div>
                 </div>
                 <div class="tarjeta">
-                    <img src="./assets/img/LIVE-IN-COLOURS-0.jpg" alt="img5">
+                    <img src="./assets/img/NSL04_500x500.jpg" alt="img5">
                     <div class="contenido_tarjeta">
-                        <h2>LIVE IN COLOURS</h2>
-                        <h4>191.900</h4>
-                        <button>Comprar</button>
+                        <h2>Lampara de Amatista</h2>
+                        <h4>$32.990</h4>
+                        <button>Añadir al Carrito</button>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="./assets/img/PM_500x500.jpg" alt="img5">
+                    <div class="contenido_tarjeta">
+                        <h2>Lampara Himalaya Flower</h2>
+                        <h4>$22.990</h4>
+                        <button>Añadir al Carrito</button>
                     </div>
                 </div>
             </div>
@@ -99,16 +107,22 @@
 
         <footer>
             <div class="abajo">
-                <h4>@miecommerce</h4>
+                <h4>@RincondeShiva</h4>
                 <div class="grupo">
                     <div class="cuadrado">
-                        <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+                        <a href="https://www.facebook.com/Jorge.Romero.M" target="_blank">
+                            <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+                        </a>
                     </div>
                     <div class="cuadrado">
-                        <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+                        <a href="www.linkedin.com/in/jorge-romero-martinez-03766823" target="_blank">
+                            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+                        </a>
                     </div>
                     <div class="cuadrado">
-                        <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                        <a href="https://www.facebook.com/Jorge.Romero.M" target="_blank">
+                            <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
             </div>
